# GitLane

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: branch.rs  diff.rs  git.rs  mod.rs  remote.rs  repo.rs
src/components/: BranchList.tsx  ClonePanel.tsx  CommitDetailPanel.tsx  CommitGraph.tsx  CommitList.tsx  CredentialModal.tsx  DiffViewer.tsx  FileTree.tsx  Sidebar.tsx  StatusBar.tsx  SyncBar.tsx
src/hooks/: useCommitLog.ts  useDiff.ts  useRepo.ts
src/lib/git/: branches.ts  commits.ts  diff.ts  index.ts  remote.ts  repo.ts
src/pages/: RepoDetailPage.tsx  RepoListPage.tsx  SettingsPage.tsx
src/store/: repoStore.ts  uiStore.ts
src/types/: index.ts
