[package]
name = "gitlane"
version = "0.1.0"
description = "GitLane — A desktop Git client"
authors = ["GitLane"]
edition = "2021"

[lib]
name = "gitlane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "minwindef", "winerror"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
